--- a/index.html
+++ b/index.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html> <!--identifica que estamos trabalhando com um documento html na versão 5-->
-<html> <!--elemento raiz de uma página html-->
-    <head> <!--elemento que contém metainformações sobre a página html-->
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--o atributo http-equiv serve para controlar as ações do browser. o valor X-UA-Compatible permite que os desenvolvedores especifiquem qual versão do Internet Explorer deve ser usada-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--informa ao navegador como ajustar as dimensões e o dimensionamento da página-->
-        <title>Portifolio</title>
-    </head>
-    <body><!--elemento que define o corpo do documento.tudo o que é visivel está aqui-->
-        <h1>Título</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis aliquam, repellendus iure recusandae perferendis incidunt nesciunt eaque ipsam temporibus nisi facere provident? Adipisci voluptatibus fuga officiis, rem harum molestiae asperiores.</p>
-        <img src="html.png" alt="logo do html 5"> <!--imagem não tem tag de fechamento-->
-        <h2>Título2</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam sit necessitatibus repellat iusto ab facilis ipsum possimus molestias quasi, esse voluptates omnis veniam magnam blanditiis. Ipsam omnis quis alias?</p>
-        <ol><!--lista ordenada-->
-            <li>item 1 da lista</li><!--representa cada item da lista-->
-            <li>item 2 da lista</li>
-            <li>item 3 da lista</li>
-        </ol>
-        <ul></ul><!--lista não ordenada-->
-    </body>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+</head>
+<body>
+    <header></header><!--Cabeçalho-->
+    <main></main><!--Conteúdo Principal-->
+    <footer></footer><!--Rodapé-->
+</body>
 </html>
