--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <header></header><!--Cabeçalho-->
-    <main></main><!--Conteúdo Principal-->
+    <main>
+        <h1>Eleve seu negócio digital a outro nível <strong>um Front-end de qualidade!</strong></h1>
+        <p>Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+        <a href="https://instagram.com/aluraonline">Instagram</a><!--âncora: cria um link para outras páginas, arquivos, emails-->
+        <a href="https://github.com/alura-cursos">Github</a>
+        <img src="imagem-alura.png" alt="Foto Joana programando">
+    </main><!--Conteúdo Principal-->
     <footer></footer><!--Rodapé-->
 </body>
 </html>
